--- a/enfoque.html
+++ b/enfoque.html
@@ -117,7 +117,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex-shrink-0">
-                    <a href="index.html" class="font-serif text-2xl tracking-wider font-semibold hover:text-peach-dust transition-colors">Psicóloga & Sexóloga</a>
+                    <a href="index.html" class="font-serif text-2xl tracking-wider font-semibold hover:text-peach-dust transition-colors">Psicólogo & Sexóloga</a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
