--- a/enfoque.html
+++ b/enfoque.html
@@ -180,7 +180,7 @@
     <footer class="bg-cloud-dancer dark:bg-charcoal-plum py-12 border-t border-nimbus-cloud/20 transition-colors duration-500">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row justify-between items-center">
             <div class="mb-4 md:mb-0">
-                <span class="font-serif text-lg font-semibold">Psicóloga & Sexóloga</span>
+                <span class="font-serif text-lg font-semibold">Psicólogo & Sexóloga</span>
                 <p class="text-sm opacity-60 mt-1">&copy; 2023 Todos los derechos reservados.</p>
             </div>
             <div class="flex space-x-6">
