--- a/enfoque.html
+++ b/enfoque.html
@@ -117,7 +117,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex-shrink-0">
-                    <a href="index.html" class="font-serif text-2xl tracking-wider font-semibold hover:text-peach-dust transition-colors">Psicólogo & Sexóloga</a>
+                    <a href="index.html" class="font-serif text-2xl tracking-wider font-semibold hover:text-peach-dust transition-colors">Psicóloga & Sexóloga</a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
@@ -180,7 +180,7 @@
     <footer class="bg-cloud-dancer dark:bg-charcoal-plum py-12 border-t border-nimbus-cloud/20 transition-colors duration-500">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row justify-between items-center">
             <div class="mb-4 md:mb-0">
-                <span class="font-serif text-lg font-semibold">Psicólogo & Sexóloga</span>
+                <span class="font-serif text-lg font-semibold">Psicóloga & Sexóloga</span>
                 <p class="text-sm opacity-60 mt-1">&copy; 2023 Todos los derechos reservados.</p>
             </div>
             <div class="flex space-x-6">
