--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         'peach-dust': 'rgb(240, 216, 204)',
                         'almost-aqua': 'rgb(203, 218, 204)',
                         'orchid-tint': 'rgb(213, 205, 218)',
+                        'hematite': 'rgb(115, 111, 106)',
                         'deep-taupe': '#4A403A', // Custom dark text color
                         'espresso-dark': '#2C2420', // For Mood Mode background
                         'charcoal-plum': '#2A242B', // Alternative dark background
