--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicóloga y Sexóloga | Terapia Integral</title>
-    <link rel="icon" type="image/svg+xml" href="logo1.svg">
+    <link rel="icon" type="image/svg+xml" href="logo.svg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
