--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex-shrink-0">
-                    <a href="index.html" class="flex items-center gap-3 font-serif text-xl md:text-2xl tracking-wider font-semibold hover:text-peach-dust transition-colors">
+                    <a href="index.html" class="flex items-center gap-3 font-serif text-lg md:text-xl tracking-wider font-semibold hover:text-peach-dust transition-colors">
                         <img src="logo.svg" alt="Logo" class="h-10 w-auto">
                         <span>Johanna Ballesteros | Psicóloga & Sexóloga</span>
                     </a>
