--- a/contact.html
+++ b/contact.html
@@ -177,17 +177,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
                         <label for="name" class="block text-sm font-medium mb-2 opacity-80">Nombre</label>
-                        <input type="text" id="name" name="nombre" class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="Tu nombre" required>
-                    </div>
-                    <div>
-                        <label for="email" class="block text-sm font-medium mb-2 opacity-80">Email</label>
-                        <input type="email" id="email" name="email" class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="tu@email.com" required>
-                    </div>
-                </div>
-                <div>
-                    <label for="message" class="block text-sm font-medium mb-2 opacity-80">Mensaje (Opcional)</label>
-                    <textarea id="message" name="motivo" rows="4" class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="¿En qué puedo ayudarte?"></textarea>
-                        <input type="text" id="name" name="name" required class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="Tu nombre">
+                        <input type="text" id="name" name="nombre" required class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="Tu nombre">
                     </div>
                     <div>
                         <label for="email" class="block text-sm font-medium mb-2 opacity-80">Email</label>
@@ -196,7 +186,7 @@
                 </div>
                 <div>
                     <label for="message" class="block text-sm font-medium mb-2 opacity-80">Motivo de la consulta</label>
-                    <textarea id="message" name="message" rows="4" required class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="¿En qué puedo ayudarte?"></textarea>
+                    <textarea id="message" name="motivo" rows="4" required class="w-full px-4 py-3 rounded-lg bg-cloud-dancer dark:bg-charcoal-plum border border-nimbus-cloud focus:ring-2 focus:ring-peach-dust focus:border-transparent outline-none transition-all" placeholder="¿En qué puedo ayudarte?"></textarea>
                 </div>
                 <div class="text-center pt-4">
                     <button type="submit" id="submit-button" class="w-full md:w-auto bg-peach-dust text-deep-taupe hover:bg-raindrops px-10 py-4 rounded-full text-lg font-medium transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1 disabled:opacity-50 disabled:cursor-not-allowed">
@@ -212,7 +202,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="bg-cloud-dancer dark:bg-charcoal-plum py-12 border-t border-nimbus-cloud/20 transition-colors duration-500">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row justify-between items-center">
             <div class="mb-4 md:mb-0">
