--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="flex-shrink-0">
                     <a href="index.html" class="flex items-center gap-3 font-serif text-sm md:text-xl tracking-wider font-semibold hover:text-peach-dust transition-colors">
                         <img src="logo.svg" alt="Logo" class="h-10 w-auto">
-                        <span class="md:hidden">Johanna Ballesteros | Psicóloga</span>
+                        <span class="md:hidden">Johanna Ballesteros</span>
                         <span class="hidden md:inline">Johanna Ballesteros | Psicóloga & Sexóloga</span>
                     </a>
                 </div>
