--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 Psicóloga y Sexóloga.
             </h1>
             <p data-i18n="hero.subtitle" class="text-xl md:text-2xl mb-10 font-light opacity-90 max-w-2xl mx-auto">
-                Un espacio seguro para recuperar tu bienestar emocional y relacional.
+                Espacio de salud emocional y sexual para personas y parejas en Barcelona.
             </p>
             <a href="contact.html" data-i18n="hero.cta" class="inline-block bg-peach-dust text-deep-taupe hover:bg-raindrops px-8 py-4 rounded-full text-lg font-medium transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
                 Reserva tu consulta
