--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <section class="flex flex-col md:flex-row h-screen w-full">
         <!-- Left Side: Image -->
         <div class="w-full md:w-1/2 h-1/2 md:h-full relative">
-            <img src="about.png" alt="Johanna Ballesteros" class="w-full h-full object-cover">
+            <img src="index.png" alt="Johanna Ballesteros" class="w-full h-full object-cover">
         </div>
         <!-- Right Side: Content -->
         <div class="w-full md:w-1/2 h-1/2 md:h-full flex items-center justify-center text-center px-4">
